--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "astro": "^5.11.0",
     "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "clsx": "2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
